# Security.Aead.Api

./: CMakeLists.txt
docs/: Architecture.md
mock/: CMakeLists.txt
mock/PiSubmarine/Security/Aead/Api/: IAeadMock.h  IProviderMock.h
public/PiSubmarine/Security/Aead/Api/: AssociatedData.h  Ciphertext.h  ErrorCode.h  IAead.h  IProvider.h  Key.h  Nonce.h  Plaintext.h
src/: CMakeLists.txt
src/PiSubmarine/Security/Aead/Api/: ErrorCode.cpp
test/: CMakeLists.txt
test/PiSubmarine/Security/Aead/Api/: AeadApiMockTest.cpp  AeadApiTest.cpp
